src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_class_2_iden_avant_extends.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les class
//
// Resultats:
//    Ligne 11 : Erreur (2 iden avant extends)
//    
//
// Historique:
//    cree le 04/01/2023

class iden1 iden2 extends iden3{

}